make the docs load the appropriate playground url, fix styling of modal preview on small widths

--- a/docs/themes/v2/source/css/styles.css
+++ b/docs/themes/v2/source/css/styles.css
@@ -2319,10 +2319,8 @@ code.hljs {
 .api-render-editor {
   border: none;
   background: var(--color-white);
-  min-width: 800px;
-  min-height: 800px;
-  width: 60vw !important;
-  height: 60vh !important;
+  width: clamp(600px, 60vw, 1200px);
+  height: clamp(600px, 60vh, 1200px);
   border-radius: 10px;
 }
 
